k8s/ingress-services.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true' # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # UPDATE ANNOTATION
    cert-manager.io/cluster-issuer: "let-me-encrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - kostenspot.nl
        - www.kostenspot.nl
      secretName: kostenspot-nl
  rules:
    - host: kostenspot.nl
      http:
          paths:
            - path: /?(.*)
              pathType: Prefix
              backend:
                service:
                  name: client-cluster-ip-service
                  port:
                    number: 3000
            - path: /api/?(.*)
              pathType: Prefix
              backend:
                service:
                  name: server-cluster-ip-service
                  port:
                    number: 5000
    - host: www.kostenspot.nl
      http:
          paths:
            - path: /?(.*)
              pathType: Prefix
              backend:
                service:
                  name: client-cluster-ip-service
                  port:
                    number: 3000
            - path: /api/?(.*)
              pathType: Prefix
              backend:
                service:
                  name: server-cluster-ip-service
                  port:
                    number: 5000
